--- a/Style.css
+++ b/Style.css
@@ -169,6 +169,21 @@ border-radius: 0%;
 color: #a303ff;
 }
 
+
+
+#Desarrollo{
+
+color: #ffffff;
+
+}
+
+
+#Desarrollo .carousel-item{
+position: relative;
+left: 3em;
+}
+
+
 #footer{
 
 
