--- a/Style.css
+++ b/Style.css
@@ -171,7 +171,7 @@ color: #a303ff;
 
 
 
-#Desarrollo{
+#Desarrollo p{
 
 color: #ffffff;
 
@@ -183,6 +183,11 @@ position: relative;
 left: 3em;
 }
 
+#Desarrollo h1{
+
+    color: #ffffff;
+
+}
 
 #footer{
 
