--- a/Style.css
+++ b/Style.css
@@ -8,7 +8,7 @@ background-color: #252525;
 
 #card-fondo-1{
 
-background-image: url(./imagenes/FOndo\ 1.png);
+background-image: url(./FOndo\ 1.png);
 background-size: 100%;
 
 }
