--- a/Style.css
+++ b/Style.css
@@ -81,13 +81,7 @@ border: none;
 }
 
 
-#Contenido1 h2{
 
-color: #ffffff;
-font-size: 25px;
-            
-
-}
 
 #Contenido1 p{
 color: #ffffff;
@@ -98,13 +92,13 @@ font-size: 12px;
 }
 
 
-#Contenido1 h2{
 
-font-size: 23px;
-color: #ffffff;
+
+
+#Titulo h2{
+    color: #ffffff;
+    display: inline-block;
 }
-
-
 
 
 
@@ -296,7 +290,9 @@ border: none;
 }
 
 
-#DISEÑAMOS-PÁGINAS h1, h4, p{
+#DISEÑAMOS-PÁGINAS h1, 
+#DISEÑAMOS-PÁGINAS h4, 
+#DISEÑAMOS-PÁGINAS p{
 
 color: #ffffff;
 
@@ -311,7 +307,9 @@ font-size: 50px;
 
 
 
-#identidad .card{
+#identidad .card,
+#identidad p,
+#identidad h1{
 width: 100%;
 border-radius: 0%;
 color: white;
@@ -373,16 +371,16 @@ left: 3em;
 
 
 
+
+
+
 #opciones .card:hover{
 
 position: relative;
-bottom: 1.5em;
+bottom: 1em;
+background: linear-gradient(10deg, #31c7ff, #2eaddc);
 
 }
-
-
-
-
 
 
 
@@ -406,6 +404,50 @@ color: #252525;
 
 
 
+#BlockChain .card{
+
+border-radius: 0%;
+
+
+}
+
+
+
+#BlockChain .card .card{
+border: none;
+border-radius: 3em;
+background: linear-gradient(10deg, #7f8cff, #6b79fd);
+box-shadow: 0px 0px 6px #000000;
+}
+
+
+#BlockChain h3, p {
+
+color: #252525;
+
+}
+
+
+
+#BlockChain a button {
+
+color: #252525;
+border: none;
+width: 80%;
+border-radius: 2em;
+height: 3em;
+background-color: #ffffff;
+
+
+}
+
+#BlockChain a :hover{
+
+color: #ffffff;
+background-color: #252525;
+
+
+}
 
 
 #footer{
