--- a/Style.css
+++ b/Style.css
@@ -101,7 +101,44 @@ font-size: 12px;
 }
 
 
+#Planes .card{
+margin-top: 0%;
+margin-bottom: 0%;
+margin-left: 0%;
+margin-right: 0%;
+padding: 0%;
+border-radius: 0%;
+background-color: #e9e9e9;
 
+}
+
+#Planes button{
+background-color: transparent;
+color: #31c7ff;
+border: solid #31c7ff 2px;
+width: 100%;
+height: 50px;
+border-radius: 2em;
+
+}
+
+
+#Planes button:hover{
+
+background-color: #31c7ff;
+color: #ffffff;
+
+}
+
+
+
+
+#plan img{
+
+border-radius: em;
+max-height: 100%;
+border-radius: 2em;
+}
 
 
 #Contenido2 p{
@@ -197,6 +234,16 @@ color: white;
 
 }
 
+
+
+#identidad .card{
+
+    background-color: #e9e9e9;
+
+}
+
+
+
 #identidad .card .card{
 
 background-color: #252525;
@@ -204,11 +251,23 @@ border-radius: 2em;
 
 }
 
-#identidad .card a p:hover{
+#identidad .card a button{
 
-color: #31c7ff;
-text-decoration: none;
+background-color: transparent;
+color: #ffffff;
+border: solid white 1px;
+border-radius: 2em;
+height: 50px;
+width: 100%;
 
+}
+
+
+#identidad .card a button:hover{
+
+color: #ffffff;
+background-color: #31c7ff;
+border: none;
 }
 
 
@@ -234,21 +293,12 @@ left: 3em;
 
 #Streamers h1{
 
-    font-size: 20px;
-
+font-size: 50px;
+color: #ffffff;
 }
 
-#Streamers p{
 
-    font-size: 15px;
 
-}
-
-#Streamers h1, #Streamers p{
-
-    color: #000000;
-
-}
 
 
 #Streamers .carousel-item img{
@@ -258,6 +308,25 @@ border-radius: 2em;
 }
 
 
+
+#Streamers a button{
+
+    background-color: transparent;
+    color: #ffffff;
+    border: solid white 1px;
+    border-radius: 2em;
+    height: 50px;
+    width: 100%;
+
+}
+
+#Streamers a button:hover{
+
+    color: #ffffff;
+    background-color: #31c7ff;
+    border: none;
+
+}
 
 
 
@@ -271,60 +340,18 @@ border-radius: 0em;
 
 #contacto h1, #contacto p{
 
-color: #ffffff;
-
-
-}
-
-
-
-
-
-
-#BlockChain .card{
-
-border-radius: 0%;
-
-
-}
-
-
-
-#BlockChain .card .card{
-border: none;
-border-radius: 3em;
-background: linear-gradient(10deg, #7f8cff, #6b79fd);
-box-shadow: 0px 0px 6px #000000;
-}
-
-
-#BlockChain h3, p {
-
 color: #252525;
 
-}
-
-
-
-#BlockChain a button {
-
-color: #252525;
-border: none;
-width: 80%;
-border-radius: 2em;
-height: 3em;
-background-color: #ffffff;
-
 
 }
 
-#BlockChain a :hover{
-
-color: #ffffff;
-background-color: #252525;
 
 
-}
+
+
+
+
+
 
 
 #footer{
